Addition for clarat-org/clarat#669 - localeapp pull for removed symbol explanations in FAQ headings

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -286,7 +286,7 @@ de:
             <p>
             <ul>
             <li class="FAQ__ico--family--family">
-            <b>Kinderwagen – Familie</b><br>
+            <b>Familie</b><br>
             Hier findest du Hilfe, wenn es Probleme in deiner Familie gibt. Zum
             Beispiel bei Streit. Aber auch bei vielen anderen Problemen. Wie zum
             Beispiel bei Problemen mit dem Erwachsenwerden. Oder mit der Erziehung.
@@ -295,7 +295,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--health--family">
-            <b>Herz – Gesundheit</b><br>
+            <b>Gesundheit</b><br>
             Hier findest du zum Beispiel Hilfe, wenn es dir schlecht geht, weil du
             krank bist. Oder weil jemand in deiner Familie krank ist. Oder wenn
             einer von euch ein Suchtproblem hat. Du findest aber auch Hilfe bei
@@ -303,7 +303,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--learn--family">
-            <b>Buch – Lernen und Arbeiten</b><br>
+            <b>Lernen und Arbeiten</b><br>
             Hier findest du zum Beispiel Hilfe, wenn du Probleme in der Schule hast.
             Oder in der Ausbildung. Du findest aber auch Hilfe, wenn du Probleme
             hast, eine Ausbildung zu finden. Oder wenn du nach einem Deutschkurs
@@ -311,7 +311,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--everydaylife--family">
-            <b>Wegweiser – Sorgen im Alltag</b><br>
+            <b>Sorgen im Alltag</b><br>
             Hier findest du Hilfe, wenn du kleine oder große Sorgen im Alltag hast.
             Zum Beispiel, wenn du Geldsorgen hast. Oder wenn du auf der Straße lebst.
             Aber auch, wenn du nach etwas suchst, was du in deiner Freizeit machen
@@ -320,14 +320,14 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--violence--family">
-            <b>Faust – Gewalt</b><br>
+            <b>Gewalt</b><br>
             Hier findest du zum Beispiel Hilfe, wenn dich jemand geschlagen oder
             missbraucht hat. Du findest aber auch Hilfe, wenn du selbst aggressiv
             oder straffällig geworden bist.
             </li>
             <br>
             <li class="FAQ__ico--crisis--family">
-            <b>Blitz – Notfall</b><br>
+            <b>Notfall</b><br>
             Hier findest du schnell Hilfe, wenn du in Not bist. Bei
             Unterstützungsangeboten, bei denen <b>Tag und Nacht</b> steht, kannst du
             dich immer melden. Ganz egal, wie spät es ist.
@@ -343,7 +343,7 @@ de:
             <p>
             <ul>
             <li class="FAQ__ico--legal--refugees">
-            <b>Paragraph – Asyl und Recht</b><br>
+            <b>Asyl und Recht</b><br>
             Hier findest du Hilfe, wenn du Fragen zum Asylverfahren hast. Egal, ob
             vor dem Verfahren, dabei oder danach. Also zum Beispiel auch, wenn du
             eine Duldung hast. Oder wenn du Fragen zu den deutschen Gesetzen hast.
@@ -351,7 +351,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--family--refugees">
-            <b>Kinderwagen – Familie</b><br>
+            <b>Familie</b><br>
             Hier findest du Hilfe, wenn es Probleme in deiner Familie gibt. Zum
             Beispiel bei Streit. Aber auch bei vielen anderen Problemen. Wie zum
             Beispiel bei Problemen mit dem Erwachsenwerden. Oder mit der Erziehung.
@@ -360,7 +360,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--health--refugees">
-            <b>Herz – Gesundheit</b><br>
+            <b>Gesundheit</b><br>
             Hier findest du zum Beispiel Hilfe, wenn du krank bist. Oder wenn du
             schwanger bist. Du findest hier auch Hilfe, wenn es dir wegen Krieg und
             Folter schlecht geht. Oder wenn du eine Behinderung hast. Du findest
@@ -368,7 +368,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--learn--refugees">
-            <b>Buch – Lernen und Arbeiten</b><br>
+            <b>Lernen und Arbeiten</b><br>
             Hier findest du Hilfe, wenn du Fragen zum Thema Lernen und Arbeiten
             hast. Zum Beispiel zu Kindergärten und Schulen. Oder wenn du wissen
             möchtest, wie du als Flüchtling studieren kannst. Oder wenn du einen
@@ -378,7 +378,7 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--everydaylife--refugees">
-            <b>Wegweiser – Leben in Deutschland</b><br>
+            <b>Leben in Deutschland</b><br>
             Hier findest du zum Beispiel Hilfe, wenn du Probleme mit Ämtern hast.
             Zum Beispiel, weil du nicht gut Deutsch sprichst. Dann findest du hier
             jemanden, der für dich übersetzt. Oder jemanden, der mit dir zum Amt
@@ -389,14 +389,14 @@ de:
             </li>
             <br>
             <li class="FAQ__ico--violence--refugees">
-            <b>Faust – Gewalt</b><br>
+            <b>Gewalt</b><br>
             Hier findest du zum Beispiel Hilfe, wenn dich jemand geschlagen hat.
             Oder wenn man dich im Krieg gefoltert hat. Du findest aber auch Hilfe,
             wenn du zum Beispiel aus einer islamistischen Gruppe aussteigen möchtest.
             </li>
             <br>
             <li class="FAQ__ico--crisis--refugees">
-            <b>Blitz – Notfall</b><br>
+            <b>Notfall</b><br>
             Hier findest du schnell Hilfe, wenn du in Not bist. Bei
             Unterstützungsangeboten, bei denen <b>Tag und Nacht</b> steht, kannst du
             dich immer melden. Ganz egal, wie spät es ist.
