--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -281,7 +281,7 @@ en:
             <p>
             <ul>
             <li class="FAQ__ico--family--family">
-            <b>Stroller – Family problems</b><br>
+            <b>Family problems</b><br>
             This is where you can find help if you have problems in your family, for
             example because of an argument. You can also find help for many other
             issues such as coming of age and raising children. Any member of the
@@ -290,7 +290,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--health--family">
-            <b>Heart – Health</b><br>
+            <b>Health</b><br>
             Here you can find help with health-related problems: for example if
             you’re facing problems because you or someone in your family is ill, or
             if you or someone you know is dealing with addiction. You will also find
@@ -299,7 +299,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--learn--family">
-            <b>Book – Learning and working</b><br>
+            <b>Learning and working</b><br>
             Here you can find help if you have problems at school or in your
             vocational training. You will also find help if you’re having trouble
             finding a spot in a vocational training program, or if you’re looking
@@ -307,7 +307,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--everydaylife--family">
-            <b>Signpost – Everyday worries</b><br>
+            <b>Everyday worries</b><br>
             Here you can find help with smaller and bigger problems in your everyday
             life: for example, if you have money troubles, or if you are living on
             the street. You will also find offerings for free time activities and
@@ -315,14 +315,14 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--violence--family">
-            <b>Fist – Violence</b><br>
+            <b>Violence</b><br>
             Here you can find help if someone has hit or abused you. You will also
             find help if you’re having trouble with aggression yourself or if you
             have committed a crime.
             </li>
             <br>
             <li class="FAQ__ico--crisis--family">
-            <b>Flash (Lightning bolt) – Emergency</b><br>
+            <b>Emergency</b><br>
             Here you can find support if you are in urgent need of help. If an
             offering’s title says <b>day and night</b> that means you can reach
             someone at any time – no matter how late it is.
@@ -338,7 +338,7 @@ en:
             <p>
             <ul>
             <li class="FAQ__ico--legal--refugees">
-            <b>Paragraph – Asylum and the law</b><br>
+            <b>Asylum and the law</b><br>
             Here you can find help if you have questions about the asylum process or
             about German laws. This section is for you regardless of whether you’re
             about to apply for asylum or a decision has already been made, for
@@ -347,7 +347,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--family--refugees">
-            <b>Stroller  – Family problems</b><br>
+            <b>Family problems</b><br>
             This is where you can find help if you have problems in your family,
             for example because of an argument. You can also find help for many
             other issues such as coming of age and raising children. Any member of
@@ -356,7 +356,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--health--refugees">
-            <b>Heart – Health</b><br>
+            <b>Health</b><br>
             Here you can find help if you are ill or if you are pregnant. You can
             also find offerings to help you if you are dealing with emotional or
             psychological trauma as a result of war or torture. This section will
@@ -365,7 +365,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--learn--refugees">
-            <b>Book – Learning and working</b><br>
+            <b>Learning and working</b><br>
             Here you can find help if you have questions about learning and working
             in Germany. You might want to learn more about preschools (kindergarten)
             and schools, what you need to do in order to study at a university, or
@@ -375,7 +375,7 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--everydaylife--refugees">
-            <b>Signpost – Living in Germany</b><br>
+            <b>Living in Germany</b><br>
             Here you can find help if you’re having trouble dealing with government
             agencies, for example because you don’t speak German. Here you can find
             someone who can translate or interpret for you, or someone who can
@@ -386,14 +386,14 @@ en:
             </li>
             <br>
             <li class="FAQ__ico--violence--refugees">
-            <b>Fist – Violence</b><br>
+            <b>Violence</b><br>
             Here you can find help if you have experienced violence or were tortured
             in your home country. You will also find help if, for example, you want
             to leave an extremist group.
             </li>
             <br>
             <li class="FAQ__ico--crisis--refugees">
-            <b>Flash (Lightning bolt) – Emergency</b><br>
+            <b>Emergency</b><br>
             Here you can find support if you are in urgent need of help. If an
             offering’s title says <b>day and night</b> that means you can reach
             someone at any time – no matter how late it is.
