mini-feature for clarat-org/clarat#795 - minor changes to FAQ

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -136,14 +136,13 @@ de:
             aktualisieren wir sie. Das heißt, wir tauschen sie aus.
           question: Sind die Informationen bei clarat aktuell?
         question_7:
-          answer: |
+          answer: |-
             Einige Angebote bei <b>clarat family</b> und bei <b>clarat refugees</b>
             kannst du von überall aus nutzen. Egal, wo du wohnst. Es gibt viele
             Angebote, bei denen man dir am Telefon oder im Internet hilft. Das
             heißt, per E-Mail, im Chat oder im Forum. Viele andere Angebote kannst
             du genau da nutzen, wo du wohnst. Bei <b>clarat refugees</b> findest du
-            bald Angebote für viele Großstädte in Deutschland. Wir haben aber mit
-            Berlin angefangen. Bei <b>clarat family</b> haben wir in Berlin
+            bald Angebote für viele Großstädte in Deutschland. Im Moment sind das Berlin, Köln und Düsseldorf. Bei <b>clarat family</b> haben wir in Berlin
             angefangen. Hier gibt es sehr viele Angebote. Aber wir sammeln weiter.
             Bald auch für weitere, große Städte in Deutschland.
           question: Gibt es clarat für ganz Deutschland?
