text from localeapp

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1590,7 +1590,7 @@ de:
           refugees.
     impressum:
       heading: Impressum
-      notice: clarat hilft dir dabei, Hilfe zu finden. Aber bei clarat bekommst du keine Beratung. Dafür gibt es Experten. Und genau die kannst du über uns finden.
+      notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
       responsible_html: |
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
