--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1511,7 +1511,7 @@ en:
           for help for refugees.
     impressum:
       heading: Impressum
-      notice: clarat helps you find help. But at clarat, you won't get any advice. There are experts for that. And it is they whom you can find through us.
+      notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
       responsible_html: |-
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
