--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -947,6 +947,7 @@ de:
         nor: Nor
         pol: Pol
         por: Por
+        pus: Pus
         rom: Rom
         ron: Ron
         rus: Rus
@@ -967,6 +968,7 @@ de:
         tir: Tir
         tuk: Tuk
         tur: Tur
+        twi: Twi
         urd: Urd
         uzb: Uzb
         vie: Vie
@@ -1154,6 +1156,7 @@ de:
         nor: Norwegisch - Norsk
         pol: Polnisch - polski
         por: Portugiesisch - português
+        pus: Paschtu - پښتو‎
         rom: Romanes - Romani
         ron: Rumänisch - română
         rus: Russisch - русский
@@ -1174,6 +1177,7 @@ de:
         tir: Tigrinisch - ትግርኛ
         tuk: Turkmenisch - Türkmençe / Tүркменче
         tur: Türkisch - Türkçe
+        twi: Twi - Twi
         urd: Urdu - اردو
         uzb: Usbekisch - Oʻzbek tili
         vie: Vietnamesisch - tiếng Việt
