--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -584,6 +584,7 @@ fr:
         nor: Nor
         pol: Pol
         por: Por
+        pus: Pus
         rom: Rom
         ron: Ron
         rus: Rus
@@ -604,6 +605,7 @@ fr:
         tir: Tir
         tuk: Tuk
         tur: Tur
+        twi: Twi
         urd: Urd
         uzb: Uzb
         vie: Vie
@@ -763,6 +765,7 @@ fr:
         nor: Norvégien - Norsk
         pol: Polonais - polski
         por: Portugais - português
+        pus: Pachto - پښتو‎
         rom: Romani - Romani
         ron: Roumain - română
         rus: Russe - русский
@@ -783,6 +786,7 @@ fr:
         tir: Tigrigna - ትግርኛ
         tuk: Turkmène - Türkmençe / Tүркменче
         tur: Turc - Türkçe
+        twi: Twi - Twi
         urd: Ourdou - اردو
         uzb: Ouzbek - Oʻzbek tili
         vie: Vietnamien - tiếng Việt
