--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -606,6 +606,7 @@ ru:
         nor: Nor
         pol: Pol
         por: Por
+        pus: Pus
         rom: Rom
         ron: Ron
         rus: Rus
@@ -626,6 +627,7 @@ ru:
         tir: Tir
         tuk: Tuk
         tur: Tur
+        twi: Twi
         urd: Urd
         uzb: Uzb
         vie: Vie
@@ -791,6 +793,7 @@ ru:
         nor: "Норвежский язык - Norsk"
         pol: "Польский язык - polski"
         por: "Португальский язык - português"
+        pus: "Пушту - پښتو‎"
         rom: "Цыганский язык - Romani"
         ron: "Румынский язык - română"
         rus: "Русский язык - русский"
@@ -811,6 +814,7 @@ ru:
         tir: "Тигринья - ትግርኛ"
         tuk: "Туркменский язык - Türkmençe / Tүркменче"
         tur: "Турецкий язык - Türkçe"
+        twi: "Чви - Twi"
         urd: "Урду - اردو"
         uzb: "Узбекский язык - Oʻzbek tili"
         vie: "Вьетнамский язык - tiếng Việt"
